--- a/gemini_1.5_turbo_scores.ipynb
+++ b/gemini_1.5_turbo_scores.ipynb
@@ -25,7 +25,7 @@
     "def initialize_gemini_model():\n",
     "    \"\"\"Initialize the Gemini model.\"\"\"\n",
     "    model_name = 'gemini-1.5-flash'\n",
-    "    api_key = 'AIzaSyAV0pHOO0FbEiM_lBBrMJ6qm4RxHmRMEnY'  # Replace with your actual API key\n",
+    "    api_key = 'API_KEY'  # Replace with your actual API key\n",
     "    if not api_key:\n",
     "        raise ValueError(\"GEMINI_API_KEY environment variable is not set.\")\n",
     "    \n",
